--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,14 +1,14 @@
-# This workflow will build a Java project with Maven
-
-name: Java CI with Maven in Linux
+name: Java CI with Maven
 
 on:
-  push:
   pull_request:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  cache-dependencies:
+    strategy:
+      matrix:
+        os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
+    runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v2
@@ -22,6 +22,27 @@ jobs:
         path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2-
+    - name: Download Maven dependencies
+      run: mvn -f io.github.lorenzobettini.example/pom.xml dependency:go-offline
+
+  build:
+    needs: cache-dependencies
+    strategy:
+      matrix:
+        os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
+    runs-on: ${{ matrix.os }}
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+    - name: Cache Maven packages
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        # perfect match for the cache key
     - name: Build with Maven
       run: mvn -f io.github.lorenzobettini.example/pom.xml verify
-
