--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,7 +24,7 @@ jobs:
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2-
     - name: Download Maven dependencies
-      run: mvn -f io.github.lorenzobettini.example/pom.xml dependency:go-offline
+      run: mvn -f io.github.lorenzobettini.example/pom.xml verify -DskipTests
 
   build:
     needs: cache-dependencies
