--- a/io.github.lorenzobettini.example/pom.xml
+++ b/io.github.lorenzobettini.example/pom.xml
@@ -34,6 +34,10 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
         </plugin>
+        <plugin>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>3.3.0</version>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
