--- a/io.github.lorenzobettini.example.parent/io.github.lorenzobettini.example.project1/.project
+++ b/io.github.lorenzobettini.example.parent/io.github.lorenzobettini.example.project1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>io.github.lorenzobettini.example</name>
+	<name>io.github.lorenzobettini.example.project1</name>
 	<comment></comment>
 	<projects>
 	</projects>
