--- a/io.github.lorenzobettini.example.parent/pom.xml
+++ b/io.github.lorenzobettini.example.parent/pom.xml
@@ -5,7 +5,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.github.lorenzobettini</groupId>
-  <artifactId>example</artifactId>
+  <artifactId>example-parent</artifactId>
+  <packaging>pom</packaging>
   <version>0.0.1-SNAPSHOT</version>
 
   <properties>
@@ -13,6 +14,10 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
+
+  <modules>
+    <module>io.github.lorenzobettini.example.project1</module>
+  </modules>
 
   <dependencies>
     <dependency>
