--- a/io.github.lorenzobettini.example.parent/io.github.lorenzobettini.example.project1/pom.xml
+++ b/io.github.lorenzobettini.example.parent/io.github.lorenzobettini.example.project1/pom.xml
@@ -11,4 +11,12 @@
   </parent>
   <artifactId>example-project1</artifactId>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.23.1</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 </project>
