--- a/io.github.lorenzobettini.example.parent/io.github.lorenzobettini.example.project1/pom.xml
+++ b/io.github.lorenzobettini.example.parent/io.github.lorenzobettini.example.project1/pom.xml
@@ -19,4 +19,12 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 </project>
