link to .github folder

--- a/io.github.lorenzobettini.example.parent/.project
+++ b/io.github.lorenzobettini.example.parent/.project
@@ -25,4 +25,11 @@
 			</matcher>
 		</filter>
 	</filteredResources>
+	<linkedResources>
+		<link>
+			<name>.github</name>
+			<type>2</type>
+			<locationURI>PARENT-1-PROJECT_LOC/.github</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
