--- a/io.github.lorenzobettini.example.parent/pom.xml
+++ b/io.github.lorenzobettini.example.parent/pom.xml
@@ -13,6 +13,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <surefire-version>2.22.2</surefire-version>
   </properties>
 
   <modules>
@@ -26,6 +27,12 @@
       <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.maven.surefire</groupId>
+      <artifactId>surefire-junit4</artifactId>
+      <version>${surefire-version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -37,7 +44,7 @@
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.2</version>
+          <version>${surefire-version}</version>
         </plugin>
         <plugin>
           <artifactId>maven-dependency-plugin</artifactId>
