--- a/io.github.lorenzobettini.example.parent/pom.xml
+++ b/io.github.lorenzobettini.example.parent/pom.xml
@@ -13,7 +13,6 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <surefire-version>2.22.2</surefire-version>
   </properties>
 
   <modules>
@@ -27,12 +26,6 @@
       <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>org.apache.maven.surefire</groupId>
-      <artifactId>surefire-junit4</artifactId>
-      <version>${surefire-version}</version>
-      <scope>test</scope>
-    </dependency>
   </dependencies>
 
   <build>
@@ -44,7 +37,7 @@
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>${surefire-version}</version>
+          <version>2.22.2</version>
         </plugin>
         <plugin>
           <artifactId>maven-dependency-plugin</artifactId>
