--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -43,7 +43,7 @@ jobs:
       uses: actions/cache@v3
       with:
         path: ~/.m2
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        # perfect match for the cache key
+        key: ${{ runner.os }}-m2-build-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2-
     - name: Build with Maven
       run: mvn -f io.github.lorenzobettini.example.parent/pom.xml verify
