--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,6 +17,7 @@ jobs:
       uses: actions/setup-java@v3.6.0
       with:
         java-version: 1.8
+        distribution: adopt
     - name: Cache Maven packages
       uses: actions/cache@v3
       with:
@@ -39,6 +40,7 @@ jobs:
       uses: actions/setup-java@v3.6.0
       with:
         java-version: 1.8
+        distribution: adopt
     - name: Cache Maven packages
       uses: actions/cache@v3
       with:
