--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,21 +31,30 @@ jobs:
     needs: cache-dependencies
     strategy:
       matrix:
-        os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
+        # test against several OSes:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        # test against several Java versions:
+        java: [ 8, 11 ]
+        # excludes JDK 11 on macOS and Windows
+        exclude:
+        - os: macos-latest
+          java: 11
+        - os: windows-latest
+          java: 11
     runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v2.5.0
-    - name: Set up JDK 8
+    - name: Set up JDK ${{ matrix.java }}
       uses: actions/setup-java@v3.6.0
       with:
-        java-version: 8
+        java-version: ${{ matrix.java }}
         distribution: adopt
     - name: Cache Maven packages
       uses: actions/cache@v3
       with:
         path: ~/.m2
-        key: ${{ runner.os }}-m2-build-${{ hashFiles('**/pom.xml') }}
+        key: ${{ runner.os }}-m2-build-${{ matrix.java }}-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2-
     - name: Build with Maven
       run: mvn -f io.github.lorenzobettini.example.parent/pom.xml verify
