perfect match for cache job cache key

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,7 +23,8 @@ jobs:
       with:
         path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-m2-
+        # perfect match for the cache key:
+        # if a POM changes we start with a brand new cache
     - name: Download Maven dependencies
       run: mvn -f io.github.lorenzobettini.example.parent/pom.xml dependency:go-offline
 
