--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -60,4 +60,6 @@ jobs:
         key: ${{ runner.os }}-m2-build-${{ matrix.java }}-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2-
     - name: Build with Maven
-      run: mvn -f io.github.lorenzobettini.example.parent/pom.xml verify
+      run: >
+        mvn -f io.github.lorenzobettini.example.parent/pom.xml
+        -Pjacoco verify
