--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -58,7 +58,7 @@ jobs:
       with:
         path: ~/.m2
         key: ${{ runner.os }}-m2-build-${{ matrix.java }}-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-m2-
+        restore-keys: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
     - name: Build with Maven
       run: >
         mvn -f io.github.lorenzobettini.example.parent/pom.xml
