--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -67,5 +67,4 @@ jobs:
     - name: Build with Maven
       run: >
         mvn -f io.github.lorenzobettini.example.parent/pom.xml
-        -Pjacoco verify
-        ${{ env.maven_arguments }}
+        ${{ env.maven_arguments }} -Pjacoco verify
